syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.server.v1";

package com.glance.spaces.zapp.content.server.v1;

import "com/glance/spaces/common/common_server_params.proto";
import "com/glance/spaces/snp/service/v1/widget_data.proto";
import "com/glance/spaces/snp/snp_params.proto";
import "com/glance/spaces/zapp/content/removed_widget_element.proto";
import "validate/validate.proto";

message ServerContentMessage {
  common.CommonServerParams common_params = 1;
  snp.SnpParams snp_params = 2;
  repeated ServerContentNotification notifications = 3 [(validate.rules).repeated.min_items = 1];
}

message ServerContentNotification {
  oneof body {
    ContentFullRefresh content_full_refresh = 2;
    AppendContent append_content = 3 [deprecated = true];
    RemoveContent remove_content = 4;
  }
}

message ContentFullRefresh {
  repeated WidgetData widgets_data = 1 [(validate.rules).repeated.min_items = 1];
  int64 user_l_plus_data_version = 2;
}

message AppendContent {
  repeated WidgetData widgets_data = 1 [(validate.rules).repeated.min_items = 1];
}

message RemoveContent {
  repeated RemovedWidgetElement widget_elements = 1 [(validate.rules).repeated.min_items = 1];
}